MACRO(COPY_DEMO)
  SET(DEMODIR "${RESOURCEDIR}/demo")
  SET(DEMOINSTDIR "${RESOURCEINSTDIR}/demo")

  SET(SRCDIR ${CMAKE_CURRENT_SOURCE_DIR})
  file(MAKE_DIRECTORY ${DEMODIR})  
  file(GLOB_RECURSE SRCFILES RELATIVE ${SRCDIR} ${SRCDIR}/*.organ ${SRCDIR}/*.wav ${SRCDIR}/*.gif ${SRCDIR}/*.jpg ${SRCDIR}/*.png)
  SET(_FILELIST)
  FOREACH(_realFile ${SRCFILES})
    STRING(REPLACE "#" "s" _currentFile "${_realFile}" )
    STRING(REPLACE "#" "*" _escapedRealFile "${_realFile}" )
    if ("${_currentFile}" MATCHES "\\.organ")
      ADD_CUSTOM_COMMAND(OUTPUT "${DEMODIR}/${_currentFile}" COMMAND ${CMAKE_COMMAND} -Dinfile="${SRCDIR}/${_realFile}" -Doutfile="${DEMODIR}/${_currentFile}" -P "${SRCDIR}/CMakeReplace.txt"  DEPENDS "${SRCDIR}/${_esacpedRealFile}")
    else()
      ADD_CUSTOM_COMMAND(OUTPUT "${DEMODIR}/${_currentFile}" COMMAND ${CMAKE_COMMAND} -E copy "${SRCDIR}/${_realFile}" "${DEMODIR}/${_currentFile}" DEPENDS "${SRCDIR}/${_escapedRealFile}")
    endif()
    get_filename_component(_dir ${_currentFile} PATH)
    INSTALL(FILES ${DEMODIR}/${_currentFile} DESTINATION ${DEMOINSTDIR}/${_dir})
    SET(_FILELIST ${_FILELIST} ${DEMODIR}/${_currentFile})
  ENDFOREACH()
  ADD_CUSTOM_TARGET(demo ALL DEPENDS ${_FILELIST})
ENDMACRO()

COPY_DEMO()
