MACRO(COPY_SOUNDS)
  IF (APPLE)
    SET(SOUNDDIR "${CMAKE_BINARY_DIR}/${PROJECT_NAME}.app/Contents/Resources/sounds")
  ELSE()
    SET(SOUNDDIR "${CMAKE_BINARY_DIR}/share/${PROJECT_NAME}/sounds")
    SET(SOUNDINSTDIR "share/${PROJECT_NAME}/sounds")
  ENDIF()

  SET(SRCDIR ${CMAKE_CURRENT_SOURCE_DIR})
  file(MAKE_DIRECTORY ${SOUNDDIR})  
  file(GLOB_RECURSE SRCFILES RELATIVE ${SRCDIR} ${SRCDIR}/*.wv)
  SET(_FILELIST)
  FOREACH(_realFile ${SRCFILES})
    SET(_currentFile "${_realFile}")
    STRING(REPLACE "#" "*" _escapedRealFile "${_realFile}" )
    ADD_CUSTOM_COMMAND(OUTPUT "${SOUNDDIR}/${_currentFile}" COMMAND ${CMAKE_COMMAND} -E copy "${SRCDIR}/${_realFile}" "${SOUNDDIR}/${_currentFile}" DEPENDS "${SRCDIR}/${_realFile}")
    get_filename_component(_dir ${_currentFile} PATH)
    IF (NOT APPLE)
      INSTALL(FILES ${SOUNDDIR}/${_currentFile} DESTINATION ${SOUNDINSTDIR}/${_dir})
    ENDIF()
    SET(_FILELIST ${_FILELIST} ${SOUNDDIR}/${_currentFile})
  ENDFOREACH()
  ADD_CUSTOM_TARGET(sounds ALL DEPENDS ${_FILELIST})
ENDMACRO()

COPY_SOUNDS()
